changes to fix login layout issue for ipad screen

--- a/src/app/modules/auth/components/login/login.component.scss
+++ b/src/app/modules/auth/components/login/login.component.scss
@@ -22,7 +22,7 @@
     padding: 0;
 
     .login-form {
-      width: 100%;
+      width: 50%;
       padding: 3rem 6rem;
       display: flex;
       flex-direction: column;
@@ -60,7 +60,7 @@
     }
   }
 
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 1024px) {
     mat-card {
       margin: 10px 20px;
     }
@@ -71,6 +71,7 @@
       }
 
       .login-form {
+        width: 100%;
         padding: 2rem 3rem;
       }
     }
